# slurm-charms

./: CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml  repository.py  test-requirements.txt
.github/: CODEOWNERS
.github/workflows/: backport.yaml  ci.yaml  nightly-TICS.yaml  release.yaml
charms/sackd/: README.md  charmcraft.yaml  pyproject.toml
charms/sackd/src/: charm.py  interface_slurmctld.py
charms/sackd/src/cos/alert_rules/prometheus/: general.rules
charms/sackd/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
charms/sackd/tests/unit/: conftest.py  test_charm.py
charms/slurmctld/: README.md  charmcraft.yaml  pyproject.toml  requirements.txt
charms/slurmctld/src/: charm.py  config.py  constants.py  high_availability.py  integrations.py  interface_influxdb.py  interface_sackd.py  interface_slurmctld_peer.py  interface_slurmd.py  interface_slurmdbd.py  interface_slurmrestd.py  mail.py  state.py
charms/slurmctld/src/cos/grafana_dashboards/: cluster_overview.json  node_overview.json  partition_overview.json
charms/slurmctld/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/slurmctld/tests/unit/: conftest.py  test_charm.py  test_ha.py
charms/slurmd/: README.md  charmcraft.yaml  pyproject.toml
charms/slurmd/src/: charm.py  config.py  constants.py  gpu.py  interface_slurmctld.py  rdma.py  state.py
charms/slurmd/src/cos/alert_rules/prometheus/: general.rules  nvidia-gpu.rules
charms/slurmd/src/utils/: gpu.py  machine.py
charms/slurmd/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/slurmd/tests/unit/: conftest.py  test_charm.py  test_config.py
charms/slurmdbd/: README.md  charmcraft.yaml  pyproject.toml
charms/slurmdbd/src/: charm.py
charms/slurmdbd/terraform/: README.md  main.tf  outputs.tf  terraform.tf  variables.tf
charms/slurmdbd/tests/unit/: test_charm.py
charms/slurmrestd/: README.md  charmcraft.yaml  pyproject.toml
charms/slurmrestd/src/: charm.py
charms/slurmrestd/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/slurmrestd/tests/unit/: conftest.py  test_charm.py
internal/sackd-interface/: README.md
internal/slurm-ops/: pyproject.toml
internal/slurm-ops/src/slurm_ops/core/: base.py  config.py  constants.py
internal/slurm-ops/tests/unit/: constants.py  test_managers.py
internal/slurmd-interface/: README.md
internal/slurmdbd-interface/: README.md
internal/slurmrestd-interface/: README.md
pkg/slurm-oci-runtime-interface/: README.md
pkg/slurmctld-interface/: README.md
pkgs/slurm-ops/: pyproject.toml
pkgs/slurm-ops/src/slurm_ops/: slurmctld.py  slurmd.py
pkgs/slurm-ops/src/slurm_ops/core/: base.py  config.py
pkgs/slurm-ops/tests/unit/: constants.py  test_base.py  test_managers.py
tests/integration/: conftest.py  constants.py  test_charm.py  test_ha.py  test_influxdb.py  test_mail.py  test_oci_runtime.py
