# Copyright 2023-2026 Canonical Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "slurm-charms"
version = "0.0"
requires-python = "==3.12.*"

[project.optional-dependencies]
dev = [
    # repository.py
    "rtoml ~= 0.0",

    # Development
    "charmed-hpc-libs[all] >= 0.1.0",
    "charmlibs-apt ~= 1.0",
    "charmed-slurm-slurmctld-interface",
    "charmed-slurm-oci-runtime-interface",
    "charmed-slurm-sackd-interface",
    "charmed-slurm-slurmd-interface",
    "charmed-slurm-slurmdbd-interface",
    "charmed-slurm-slurmrestd-interface",
    "cosl ~= 1.0",
    "cryptography ~= 48.0",
    "distro ~= 1.0",
    "influxdb == 5.3.2",
    "nvidia-ml-py == 12.560.30",
    "ops ~= 3.0",
    "psutil ~= 7.0",
    "pydantic ~= 2.0",
    "slurm-ops",
    "slurmutils<2.0.0,>=1.1.1",

    # Tests
    "charmed-hpc-libs[all] >= 0.1.0",
    "ops[testing] ~= 3.0",
    "python-dotenv~=1.2.2",
    "pyfakefs == 5.10.1",
    "coverage[toml]",
    "psutil ~= 7.0",

    # Integration
    "aiosmtpd == 1.4.6",
    "jubilant ~= 1.0",
    "pytest ~= 9.0",
    "pytest-order ~= 1.4",
    "pytest-mock ~= 3.14",
    "tenacity ~= 8.2",

    # Linting
    "black",
    "ruff",
    "codespell",
    "pyright",

    # TiCS scan dependencies
    "flake8",
    "pylint",
    "pytest",
    "pyyaml",
]

[tool.uv.workspace]
members = [
    "charms/*",
    "internal/*",
    "pkg/*",
]

[tool.uv.sources]
slurm-ops = { workspace = true }
charmed-slurm-slurmctld-interface = { workspace = true }
charmed-slurm-oci-runtime-interface = { workspace = true }
charmed-slurm-sackd-interface = { workspace = true }
charmed-slurm-slurmd-interface = { workspace = true }
charmed-slurm-slurmdbd-interface = { workspace = true }
charmed-slurm-slurmrestd-interface = { workspace = true }
python-apt = { git = "https://git.launchpad.net/python-apt", rev = "d44043b6df5cb010f3496fc31033c0b6e1f4f021" }
ubuntu-drivers-common = { git = "https://github.com/canonical/ubuntu-drivers-common", rev = "df01d1c365a9ec82656283fbc360fd420ffcf1e3" }


[tool.uv]
dependency-metadata = [
    { name = "python-apt", version = "3.1.0" },
    { name = "ubuntu-drivers-common", version = "0.10.3" }
]

[tool.repository]
external-libraries = [
    { lib = "operator-libs-linux.apt", version = "0.16" },
    { lib = "data-platform-libs.data_interfaces", version = "0.41" },
    { lib = "grafana-agent.cos_agent", version = "0.20" },
    { lib = "filesystem-client.mount_info", version = "0.1" },
    { lib = "smtp-integrator.smtp", version = "0.19" },
    { lib = "prometheus_k8s.prometheus_scrape", version = "0.58" }
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.paths]
source = ["charms", "*/_build"]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Spell checking tools configuration
[tool.codespell]
skip = "_build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.pytest_cache,.vscode,.coverage,.venv,cover"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py312"]

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.ignore = ["E501", "D107"]
lint.mccabe.max-complexity = 15
lint.per-file-ignores = { "**/tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
] }
extend-exclude = ["__pycache__", "*.egg_info"]
