[project]
name = "slurmctld"
version = "0.0"
requires-python = "==3.12.*"
dependencies = ["ops", "slurmutils", "influxdb", "netifaces-plus", "hpc-libs", "cosl"]

[tool.repository]
libraries = [
    "grafana-agent.cos_agent",
    "operator-libs-linux.apt",
    "operator-libs-linux.snap",
    "operator-libs-linux.systemd",
]
