[project]
name = "slurmctld"
version = "0.0"
requires-python = "==3.12.*"
dependencies = [
    "ops ~= 3.0",
    "slurmutils<2.0.0,>=1.1.1",
    "influxdb == 5.3.2",
    "pydantic ~= 2.0",
    "psutil ~= 7.0",
    "charmed-hpc-libs[ops] >= 0.1.0",
    "charmed-slurm-slurmctld-interface",
    "charmed-slurm-oci-runtime-interface",
    "charmed-slurm-sackd-interface",
    "charmed-slurm-slurmd-interface",
    "charmed-slurm-slurmdbd-interface",
    "charmed-slurm-slurmrestd-interface",
    "charmlibs-apt",
    "cosl ~= 1.0",
    "slurm-ops",
]

[tool.repository]
libraries = ["grafana-agent.cos_agent", "filesystem-client.mount_info", "smtp-integrator.smtp"]
