[project]
name = "slurmd"
version = "0.0"
requires-python = "==3.12.*"
dependencies = [
    "ops",
    "slurmutils",
    "ubuntu-drivers-common",
    "charmed-hpc-libs[ops] >= 0.1.0",
    "charmed-slurm-slurmd-interface",
    "cosl",
    "slurm-ops",
]

[tool.repository]
libraries = [
    "operator-libs-linux.apt",
    "prometheus_k8s.prometheus_scrape"
]
