[project]
name = "slurmdbd"
version = "0.0"
requires-python = "==3.12.*"
dependencies = [
    "ops ~= 3.0",
    "slurmutils<2.0.0,>=1.1.1",
    "charmed-hpc-libs[ops] >= 0.1.0",
    "charmed-slurm-slurmdbd-interface",
    "cosl ~= 1.0",
    "pydantic ~= 2.0",
    "slurm-ops"
]

[tool.repository]
libraries = ["data-platform-libs.data_interfaces", "grafana-agent.cos_agent"]
