# Copyright 2025 Canonical Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "slurm-ops"
version = "0.1.0"
description = "Manage Slurm service operations on machines."
authors = [
    { name = "Ubuntu High-Performance Computing", email = "hpc-ubuntu-group@canonical.com" },
]
requires-python = ">=3.12"
dependencies = [
    "charmed-hpc-libs[ops]",
    "charmlibs-apt ~= 1.0",
    "cryptography ~= 48.0",
    "distro ~= 1.0",
    "nvidia-ml-py == 12.560.30",
    "slurmutils<2.0.0,>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
